# vcc.py

./: .gitignore  .mypy.ini  README.md  bh.py  build.fish  commands.py  constants.py  pretty.py  pyrightconfig.json  setup.cfg  sock.py  vcc.py
.github/workflows/: python.yml
vcc_py/: __init__.py  __main__.py  bh.py  commands.py  config.py  constants.py  crypt.py  plugin.py  pretty.py  readconf.py  sock.py  vcc.py
vcc_py/plugins/: ban.py  beep.py  cqd.py  m4.py  raw.py  vcr.py
