[metadata]
name = vcc_py
version = 0.2.0
description_file = README.md
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = 3swordman
maintainer_email = yyuxiaoran@gmail.com

[options]
packages = vcc_py
python_requires = >=3.10
install_requires = 
    importlib-metadata

[options.entry_points]
console_scripts =
    vcc = vcc_py.vcc:amain
