[metadata]
name = vcc_py
version = attr: vcc_py.__version__
description = the python version of vcc
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = 3swordman
maintainer_email = yyuxiaoran@gmail.com

[options]
packages = vcc_py
python_requires = >=3.10
install_requires = 
    importlib-metadata

[options.entry_points]
console_scripts =
    vcc = vcc_py.vcc:amain
